# memo_server

./: .gitignore  docker-compose.yml  仕様書.txt  詳細設計書
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  main.rs  startup.rs
backend/src/application/memo/: dto.rs  service.rs
backend/src/application/user/: dto.rs
backend/src/domain/memo/: entity.rs  repository.rs
backend/src/domain/user/: entity.rs  repository.rs
backend/src/infrastructure/persistence/: elasticsearch.rs  mod.rs  redis.rs  scylla.rs
backend/src/infrastructure/repositories/: memo.rs
backend/src/interfaces/: mod.rs  routes.rs
backend/src/interfaces/rest/: memo.rs
docker/backend/: Dockerfile
docker/frontend/: Dockerfile
frontend/: eslint.config.js  jsconfig.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.js  tsconfig.json  vite.config.js
frontend/src/: app.d.ts
frontend/src/components/features/home/: RecentMemos.svelte  SearchBar.svelte  StatsSummary.svelte
frontend/src/components/ui/: Button.svelte  Card.svelte  Input.svelte  index.ts
frontend/src/lib/api/: attachment.ts  memo.ts  types.ts
frontend/src/lib/constants/: editorActions.ts
frontend/src/lib/stores/: attachmentStore.ts  editorStore.ts  index.ts  memoStore.ts
frontend/src/lib/types/: date.d.ts  editor.ts  search.ts  ui.ts
frontend/src/lib/utils/: data.ts  date.ts  file.ts  index.ts  markdown.ts  mime.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/memos/search/: +page.svelte  (+1 more)
frontend/src/routes/settings/: +page.svelte
frontend/src/routes/shared/: +page.svelte
(+13 files in other folders)
